--- a/ProvingMyWorth/ProvingMyWorth.CSharp.csproj
+++ b/ProvingMyWorth/ProvingMyWorth.CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\Fractal.cs" />
     <Compile Include="Assets\Scripts\Pipe.cs" />
     <Compile Include="Assets\Scripts\PipeSystem.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\VaryPipeRadius.cs" />
     <Compile Include="Assets\Scripts\VaryPipeSys.cs" />
   </ItemGroup>
