Started Spline Pathing

--- a/ProvingMyWorth/ProvingMyWorth.CSharp.csproj
+++ b/ProvingMyWorth/ProvingMyWorth.CSharp.csproj
@@ -63,13 +63,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Fractal.cs" />
+    <Compile Include="Assets\Scripts\Bezier.cs" />
+    <Compile Include="Assets\Scripts\BezierSpline.cs" />
     <Compile Include="Assets\Scripts\Pipe.cs" />
     <Compile Include="Assets\Scripts\PipeSystem.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\Scripts\RandomTest.cs" />
-    <Compile Include="Assets\Scripts\VaryPipeRadius.cs" />
-    <Compile Include="Assets\Scripts\VaryPipeSys.cs" />
+    <Compile Include="Assets\Scripts\SplineWalker.cs" />
+    <Compile Include="Assets\Scripts\Testing\BezierCurve.cs" />
+    <Compile Include="Assets\Scripts\Testing\Fractal.cs" />
+    <Compile Include="Assets\Scripts\Testing\Line.cs" />
+    <Compile Include="Assets\Scripts\Testing\RandomTest.cs" />
+    <Compile Include="Assets\Scripts\Testing\SphereTest.cs" />
+    <Compile Include="Assets\Scripts\Testing\VaryPipeRadius.cs" />
+    <Compile Include="Assets\Scripts\Testing\VaryPipeSys.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
